Исправлены поля моделей, добавлен контекст базы данных и настроены связи, добавлен интерфейс и репозиторий для User, добавлен класс Extensions

--- a/WebCW1/WebCW1.csproj
+++ b/WebCW1/WebCW1.csproj
@@ -17,4 +17,9 @@
     <Folder Include="Contollers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
