--- a/WebCW1/appsettings.json
+++ b/WebCW1/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnection": "Host=localhost; Database=ComputerClub; Username=vadim; Password=1707"
+  }
 }
