Добавлен Jwt key

--- a/WebCW1/appsettings.json
+++ b/WebCW1/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     "DefaultConnection": "Host=localhost; Database=ComputerClub; Username=vadim; Password=1707"
+  },
+  "Jwt": {
+    "key": "KJH4-GFV7-R8T3-YU5-MN9-QP2-A3S5-ZX1-W2E6-R4Y7-T8M0-N9P1-J2Q3-V5W6-X8Z9"
   }
 }
